fix: исправить ошибки после 1 ревью: вынести коды и сообщения ошибок в константы

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
+/* eslint-disable no-underscore-dangle */
+
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+      "no-underscore-dangle": "off"
+  }
 }
+
+
